Add post generators.